Finishing test and Correcting Swagger
