# static/swagger.json
@@ -46,37 +46,14 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "columns": {
-                  "type": "array",
-                  "items":{
-                    "type": "string"
-                  }
-                },
-                "index": {
-                  "type": "array",
-                  "items":{
-                    "type": "integer"
-                  }
-                },
-                "data": {
-                  "type": "array",
-                  "items":{
-                    "type": "number"
-                  }
-                }
-              }
-            }
+            "description": "Successful response."            
           }
         }
       }
     },
     "/dephiringaboveavg": {
       "post": {
-        "summary": "Returns a simple greeting message.",
+        "summary": "Number of employees hired for each job and department in YEAR divided by quarter. The table must be ordered alphabetically by department and job.",
         "produces": [
           "application/json"
         ],
@@ -84,9 +61,9 @@
           {
             "in": "formData",
             "type": "integer",
-            "name": "year_selection",
-            "description": "Select table to insert data",            
-            "example": "modded",
+            "name": "Select Year",
+            "description": "Select Year to bring corresponding data",            
+            "example": "2021",
             "required": true              
           }
           
@@ -123,7 +100,7 @@
     },
     "/numberemployee": {
       "post": {
-        "summary": "Returns a simple greeting message.",
+        "summary": "List of ids, name and number of employees hired of each department that hired more employees than the mean of employees hired in 2021 for all the departments, ordered by the number of employees hired (descending).",
         "produces": [
           "application/json"
         ],
@@ -131,25 +108,26 @@
           {
             "in": "formData",
             "type": "integer",
-            "name": "year_selection",
-            "description": "Select table to insert data",            
-            "example": "modded",
+            "name": "Select Year",
+            "description": "Select Year to bring corresponding data",         
+            "default": 2021,
+            "example": "2021",
             "required": false              
           },
           {
             "in": "formData",
             "type": "string",
-            "name": "department_Selection",
-            "description": "* or Departments seperated by ';'",            
-            "example": "modded",
+            "name": "Select Department",
+            "description": "Departments seperated by ';' or empty for all",
+            "example": "Accounting;Business Development",
             "required": false              
           },
           {
             "in": "formData",
             "type": "string",
-            "name": "job_Selection",
-            "description": "* or Jobs seperated by ';'",            
-            "example": "modded",
+            "name": "Select Job",
+            "description": "Jobs seperated by ';' or empty for all",
+            "example": "Account Representative IV",
             "required": false              
           }
         ],
@@ -183,56 +161,5 @@
         }
       }
     }
-  },
-  "definitions":{
-      "predict_type":{
-         "type":"object",
-          "example":{
-            "carat": 0.23,
-            "cut": "Ideal",
-            "color": "E",
-            "clarity": "SI2",
-            "depth": 61.5,
-            "table": 55,
-            "price": 326,
-            "x": 3.95,
-            "y": 3.98,
-            "z": 2.43
-          },
-         "properties":{
-          
-            "carat": {
-                "type": "number"
-            },
-            "cut": {
-                "type": "string"
-            },
-            "color": {
-                "type": "string"
-            },
-            "clarity": {
-                "type": "string"
-            },
-            "depth": {
-                "type": "number"
-            },
-            "table": {
-                "type": "integer"
-            },
-            "price": {
-                "type": "integer"
-            },
-            "x": {
-                "type": "number"
-            },
-            "y": {
-                "type": "number"
-            },
-            "z": {
-                "type": "number"
-            }
-        
-         }
-      }
-   }
+  }  
 }
